Fix carousel overflow issue

--- a/RehearsalNeRF/static/css/index.css
+++ b/RehearsalNeRF/static/css/index.css
@@ -116,9 +116,9 @@ body {
 }
 
 .results-carousel .item {
-  margin: 5px;
+  margin: 0;
   overflow: hidden;
-  border: 1px solid #bbb;
+  border: none;
   border-radius: 10px;
   padding: 0;
   font-size: 0;
